# rp-pico-template

./: CMakeLists.txt  Dockerfile  Justfile  README.md
src/: main.c
